web/public/css/style.css
body {
  margin-top: 50px;
}

.welcome-blurb p, .welcome-blurb li {
  font-size: 18px;
  line-height: 1.2em;
}
.welcome-blurb li { margin-top: 1em; }
.welcome-blurb h2 {
  line-height: 1.4em;
  margin-bottom: 15px;
}

.welcome-blurb p {
  margin-left: 15px;
  margin-bottom: 15px;
}


.search-thing * {
  font-size:20px;font-weight:900
}
.search-thing select {
  height: 1.8em;
}

p .spacey {
  margin-bottom:30px;
}

.top-rankings h2 {
  text-align: center;
}

.top-rankings table {
  margin-left: auto;
  margin-right: auto;
}

.detail_swatch { float: right; display: inline-block; width: 10px; height: 10px; margin: 0 4px 0 0 }
.rickshaw_graph .detail .x_label { display: none }

::-webkit-scrollbar {
background:transparent;overflow:visible; width:15px;}
::-webkit-scrollbar-thumb {
background-color:rgba(0,0,0,0.2); border:solid #fff;}
::-webkit-scrollbar-thumb:hover {
background:rgba(0,0,0,0.4);}
::-webkit-scrollbar-thumb:horizontal {
border-width:4px 6px;min-width:40px;}
::-webkit-scrollbar-thumb:vertical {
border-width:6px 4px;min-height:40px;}
::-webkit-scrollbar-track-piece{
background-color:#fff;}
::-webkit-scrollbar-corner {
background:transparent;}
::-webkit-scrollbar-thumb {
background-color: #333;}
::-webkit-scrollbar-thumb:hover {
background-color: #555;}

